--- a/css/style.css
+++ b/css/style.css
@@ -209,3 +209,91 @@ a:hover {
 
 
 }
+
+@media(max-width: 830px) {
+    * {
+        margin: 0 !important;
+        padding: 0 !important;
+        gap: 0 !important;
+        box-sizing: border-box !important;
+    }
+
+    a {
+        font-size: 1.5rem !important;
+    }
+
+    #text-nav {
+        font-size: 2rem;
+    }
+
+    .container-fluid {
+        padding: 20px !important;
+    }
+
+    .navbar-toggler-icon {
+        font-size: 25px;
+    }
+
+    ul{
+        gap: 25px !important;
+    }
+
+    #screen-home {
+        display: flex !important;
+        flex-direction: column-reverse !important;
+        margin: auto;
+    }
+
+    #div-img01 {
+        margin-left: 150px !important;
+        margin-top: -100px !important;
+
+    }
+
+    #img01 {
+        width: 100%;
+    }
+
+    #screen-home-left-side>h2 {
+        font-size: 3.5rem;
+    }
+
+    #screen-home-left-side>h1 {
+        font-size: 4.5rem;
+    }
+
+    #screen-home-left-side>p {
+        font-size: 2rem;
+    }
+
+    #screen-home-left-side-icons {
+        display: flex;
+        margin: auto !important;
+        margin-top: 30px !important;
+        width: 100vw !important;
+        height: 90px !important;
+        gap: 15px !important;
+
+    }
+
+    .icon-dev {
+        width: 80px !important;
+        height: 80px !important;
+    }
+
+    #div-btn-home {
+        display: flex !important;
+        justify-content: center;
+        margin-top: 40px !important;
+        gap: 50px !important;
+        
+    }
+
+    .btn01 {
+        width: 300px !important;
+        height: 150px !important;
+        font-size: 2rem;
+        border-radius: 20px;
+    }
+
+}
