--- a/css/style.css
+++ b/css/style.css
@@ -76,10 +76,6 @@ a:hover {
     }
 }
 
-
-
-
-
 @media(max-width: 1024px) {
     * {
         margin: 0 !important;
@@ -165,48 +161,6 @@ a:hover {
         font-size: 2rem;
         border-radius: 20px;
     }
-
-}
-
-@media(max-width: 480px) {
-    * {
-        margin: 0 !important;
-        padding: 0 !important;
-        gap: 0 !important;
-        box-sizing: border-box !important;
-    }
-
-    #screen-home {
-        display: flex !important;
-        flex-direction: column-reverse !important;
-        margin-bottom: 80px !important;
-
-    }
-
-    .img01 {
-        width: 50%;
-    }
-
-    #screen-home-left-side>h2 {
-        font-size: 3.5rem;
-    }
-
-    #screen-home-left-side>h1 {
-        font-size: 4.5rem;
-    }
-
-    #screen-home-left-side>p {
-        font-size: 2rem;
-    }
-
-    #screen-home-left-side-icons {
-        display: flex;
-        margin: auto !important;
-        width: 60px !important;
-        gap: 15px !important;
-
-    }
-
 
 }
 
@@ -297,3 +251,318 @@ a:hover {
     }
 
 }
+
+@media(max-width: 651px) {
+    * {
+        margin: 0 !important;
+        padding: 0 !important;
+        gap: 0 !important;
+        box-sizing: border-box !important;
+    }
+
+    a {
+        font-size: 1.5rem !important;
+    }
+
+    #text-nav {
+        font-size: 2rem;
+    }
+
+    .container-fluid {
+        padding: 20px !important;
+    }
+
+    .navbar-toggler-icon {
+        font-size: 25px;
+    }
+
+    ul{
+        gap: 25px !important;
+    }
+
+    #screen-home {
+        display: flex !important;
+        flex-direction: column-reverse !important;
+        margin: auto;
+    }
+
+    #div-img01 {
+        margin-left: 150px !important;
+        margin-top: -100px !important;
+
+    }
+
+    #img01 {
+        width: 100%;
+    }
+
+    #screen-home-left-side>h2 {
+        font-size: 3.5rem;
+    }
+
+    #screen-home-left-side>h1 {
+        font-size: 4.5rem;
+    }
+
+    #screen-home-left-side>p {
+        font-size: 2rem;
+    }
+
+    #screen-home-left-side-icons {
+        display: flex;
+        margin: auto !important;
+        margin-top: 30px !important;
+        width: 100vw !important;
+        height: 90px !important;
+        gap: 15px !important;
+
+    }
+
+    .icon-dev {
+        width: 80px !important;
+        height: 80px !important;
+    }
+
+    #div-btn-home {
+        display: flex !important;
+        justify-content: center;
+        margin-top: 40px !important;
+        gap: 50px !important;
+        
+    }
+
+    .btn01 {
+        width: 220px !important;
+        height: 90px !important;
+        font-size: 2rem;
+        border-radius: 20px;
+    }
+
+}
+
+@media(max-width: 520px) {
+    * {
+        margin: 0 !important;
+        padding: 0 !important;
+        gap: 0 !important;
+        box-sizing: border-box !important;
+    }
+
+    a {
+        font-size: 1.5rem !important;
+    }
+
+    #text-nav {
+        font-size: 2rem;
+    }
+
+    .container-fluid {
+        padding: 20px !important;
+    }
+
+    .navbar-toggler-icon {
+        font-size: 25px;
+    }
+
+    ul{
+        gap: 25px !important;
+    }
+
+    #screen-home {
+        display: flex !important;
+        flex-direction: column-reverse !important;
+        margin: auto;
+    }
+
+    #div-img01 {
+        margin-left: 150px !important;
+        margin-top: -70px !important;
+
+    }
+
+    #img01 {
+        width: 100%;
+    }
+
+    #screen-home-left-side>h2 {
+        font-size: 2.5rem;
+    }
+
+    #screen-home-left-side>h1 {
+        font-size: 3.5rem;
+    }
+
+    #screen-home-left-side>p {
+        font-size: 1.5rem;
+    }
+
+    #screen-home-left-side-icons {
+        display: flex;
+        margin: auto !important;
+        margin-top: 30px !important;
+        width: 100vw !important;
+        height: 90px !important;
+        gap: 15px !important;
+
+    }
+
+    .icon-dev {
+        width: 60px !important;
+        height: 60px !important;
+    }
+
+    #div-btn-home {
+        display: flex !important;
+        justify-content: center;
+        margin-top: 40px !important;
+        gap: 50px !important;
+        
+    }
+
+    .btn01 {
+        width: 200px !important;
+        height: 100px !important;
+        font-size: 1.5rem;
+        border-radius: 20px;
+    }
+
+}
+
+@media(max-width: 480px) {
+    * {
+        margin: 0 !important;
+        padding: 0 !important;
+        gap: 0 !important;
+        box-sizing: border-box !important;
+    }
+
+    #screen-home {
+        display: flex !important;
+        flex-direction: column-reverse !important;
+        margin-bottom: 80px !important;
+
+    }
+
+    .img01 {
+        width: 50%;
+    }
+
+    #screen-home-left-side{
+        width: 425px;
+    }
+
+    #screen-home-left-side>h2 {
+        font-size: 3.5rem;
+    }
+
+    #screen-home-left-side>h1 {
+        font-size: 4.5rem;
+    }
+
+    #screen-home-left-side>p {
+        font-size: 2rem;
+    }
+
+    #screen-home-left-side-icons {
+        display: flex;
+        margin: auto !important;
+        width: 425px !important;
+        gap: 15px !important;
+        padding: 0;
+
+    }
+
+
+}
+
+@media(max-width: 430px) {
+    * {
+        margin: 0 !important;
+        padding: 0 !important;
+        gap: 0 !important;
+        box-sizing: border-box !important;
+        border: none !important;
+    }
+
+    a {
+        font-size: 1.5rem !important;
+    }
+
+    #text-nav {
+        font-size: 2rem;
+    }
+
+    .container-fluid {
+        padding: 20px !important;
+    }
+
+    .navbar-toggler-icon {
+        font-size: 25px;
+    }
+
+    ul{
+        gap: 25px !important;
+    }
+
+    #screen-home {
+        display: flex !important;
+        flex-direction: column-reverse !important;
+        padding: 0 !important;
+    }
+
+    #div-img01 {
+        margin-top: -50px !important;
+
+    }
+
+    #img01 {
+        width: 70%;
+        padding: 0 !important;
+        
+    }
+
+    #screen-home-left-side>h2 {
+        font-size: 1.5rem;
+    }
+
+    #screen-home-left-side>h1 {
+        font-size: 2.5rem;
+    }
+
+    #screen-home-left-side>p {
+        font-size: .5rem;
+    }
+
+    #screen-home-left-side-icons {
+        display: flex;
+        margin: auto !important;
+        margin-left: -15px !important;
+        margin-top: 30px !important;
+        width: 425px !important;
+        height: 90px !important;
+        gap: 15px !important;
+
+    }
+
+    .icon-dev {
+        width: 40px !important;
+        height: 40px !important;
+    }
+
+    #div-btn-home {
+        display: flex !important;
+        justify-content: center;
+        margin-top: -20px !important;
+        gap: 50px !important;
+        
+    }
+
+    .btn01 {
+        width: 120px !important;
+        height: 70px !important;
+        font-size: 1rem;
+        border-radius: 20px;
+    }
+
+}
+
