--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,13 @@
 }
 
 
+#btn-cv>a, #btn-wpp>a{
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+}
+
+
 @media(max-width: 991px){
     main{
         margin-top: -3.5rem;
@@ -40,4 +47,9 @@
         gap: 5%;
     }
 
+    footer > p {
+        text-align: center;
+        font-size: .5rem;
+        margin-top: 2rem;
+    }
 }
